<resources>
    <string name="app_name">SCAF</string>
    <!-- Strings related to login -->
    <string name="prompt_name">User Name</string>
    <string name="prompt_pet_name">Pet Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Already have an account? <a href="">Log In!</a></string>
    <string name="action_sign_up">Don\'t have an account? <a href="">Sign up!</a></string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="slogan">Smart Meal Planning For Your Cat</string>
    <string name="user_profile">User Profile</string>
    <string name="pet_profile">Pet Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_account">Account</string>
    <string name="menu_functions">Functions</string>
    <string name="menu_notices">Notices</string>
</resources>