<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_functions"
            android:icon="@drawable/ic_menu_functions"
            android:title="@string/menu_functions" />
        <item
            android:id="@+id/nav_notices"
            android:icon="@drawable/ic_menu_notices"
            android:title="@string/menu_notices" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_account"
            android:title="@string/menu_account" />
    </group>
</menu>