<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.scaf.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_functions"
        android:name="com.example.scaf.ui.functions.FunctionsFragment"
        android:label="@string/menu_functions"
        tools:layout="@layout/fragment_functions" />

    <fragment
        android:id="@+id/nav_notices"
        android:name="com.example.scaf.ui.notices.NoticesFragment"
        android:label="@string/menu_notices"
        tools:layout="@layout/fragment_notices" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.scaf.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />
</navigation>